# wiznet-rs

./: CLAUDE.md  Cargo.toml  LICENSE  README.MD  TODO.md  memory.x
.cargo/: config.toml
.github/workflows/: ci.yml
examples/: spi_dma_loopback.rs
examples/echo/: Cargo.toml
examples/echo/src/: hal_spi.rs  main.rs
examples/echo/tools/: echo_test.py
examples/tcp_echo/: Cargo.toml
examples/tcp_echo/src/: hal_spi.rs  main.rs
examples/tcp_echo/tools/: echo_test.py
src/: hal_spi.rs  main.rs  w6100.rs
src/w6100/: atomic_cell.rs  mod.rs  ring_buffer.rs  socket.rs  socket_common.rs  tcp_socket.rs  transiver.rs
todos/: DMA.md
wiznet-rs/: Cargo.toml
wiznet-rs/src/: atomic_cell.rs  error.rs  lib.rs  ring_buffer.rs  socket.rs  socket_common.rs  spi_dma.rs  spsc_ring.rs  tcp_socket.rs  transiver.rs  udp_socket.rs
wiznet-rs/tests/: echo_harness.rs
