[package]
name = "stm32_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-hal = "1.0"
embedded-hal-bus = "0.3"
nb = "1"
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "1.0.0"
bitflags = "2.4"

[dependencies.stm32f1xx-hal]
version = "0.11.0"
features = ["stm32f103"]

# Your own crate: unoptimized, full debug info — fully debuggable.
[profile.dev]
opt-level = 1
debug = true

# All dependencies: optimize for size and drop their debug info. This is what
# shrinks the build; you rarely step through HAL/cortex-m anyway. `"*"` matches
# every dependency but NOT your own package.
[profile.dev.package."*"]
opt-level = "z"
debug = false