[package]
name = "tcp_echo"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-hal = "1.0"
embedded-hal-bus = "0.3"
embedded-dma = "0.2"
nb = "1"
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "1.0.0"
bitflags = "2.4"
static_cell = "2"

wiznet-rs = { path = "../../wiznet-rs" }

[dependencies.stm32f1xx-hal]
version = "0.11.0"
features = ["stm32f103"]